--- a/src/components/common_header/header_search_form/header_search_form.module.css
+++ b/src/components/common_header/header_search_form/header_search_form.module.css
@@ -1,7 +1,8 @@
 .select_input {
+  appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-
+  color: gray;
   background-image: linear-gradient(45deg, transparent 50%, white 50%),
     linear-gradient(135deg, white 50%, transparent 50%),
     linear-gradient(to right, #51a5d1, #51a5d1);
@@ -9,9 +10,14 @@
   background-size: 5px 5px, 5px 5px, 25% 100%;
   background-repeat: no-repeat;
 }
+
 .option {
+  @apply text-white;
   background: #51a5d1;
+  border: none;
+  outline: none;
 }
 .text_input::placeholder {
   @apply text-xs;
+  color: gray;
 }
