--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,19 +80,48 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  outline: 0;
+  appearance: 0;
+  border: 0;
+  text-decoration: none;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
-  font-weight: 400;
+  font-weight: 500;
+  font-size: 0.88rem;
+  user-select: none;
+  overflow-x: hidden;
+  line-height: 19px;
   /*
   letter-spacing: 1px;
   word-spacing: 1px;
   */
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+h1 {
+  font-weight: 800;
+  font-size: 1.8rem;
+}
+h2 {
+  font-weight: 700;
+  font-size: 1.4rem;
+}
+h3 {
+  font-weight: 500;
+  font-size: 0.87rem;
+}
+small {
+  font-size: 0.76rem;
+}
 a {
   color: inherit;
   text-decoration: none;
