--- a/src/components/common_header/header_navigation/header_navigation.module.css
+++ b/src/components/common_header/header_navigation/header_navigation.module.css
@@ -10,6 +10,18 @@
   background-color: #e5edf3 !important;
   color: #1e8ac2;
 }
+.main_nav_button_hover {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 25px;
+  transition: 0.3s ease-out all;
+  background-color: #2094ce;
+  cursor: pointer;
+}
+.main_nav_button_hover:hover {
+  color: white;
+  background-color: #135f87;
+}
 .sub_nav_item_hover {
   font-weight: 400;
   font-size: 12px;
@@ -20,5 +32,5 @@
 }
 .sub_nav_item_hover:hover {
   text-decoration: underline;
-  text-decoration-color: #1977a6;
+  text-decoration-color: #135f87;
 }
